[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "bruteforce"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
curses-menu = "^0.5.0"
getpass4 = "^0.0.8"
[tool.poetry.dev-dependencies]
